@@ -26,6 +26,7 @@
 #'     transcript cell line')}
 #'   }
 #'   See \url{https://www.proteinatlas.org/about/download} for more information.
+#'   
 #' @param version A string indicate which version to be downloaded. Possible
 #'   value:
 #'   \itemize{
@@ -40,7 +41,9 @@
 #'     the dataset. For example: 'v18' download version 18. Currently support
 #'     version 17 and above. Require Internet connection.
 #'   }
-#'   
+#' 
+#' @family downloadable datasets functions
+#' 
 #' @return This function will return a list of tibbles corresponding to
 #'   requested datasets.
 #'  
@@ -265,72 +268,17 @@ hpaDownload <- function(downloadList='histology', version='latest') {
     return(loadedData)
 }
 
-
-#########################
-## List available data ##
-#########################
-
-#' List available data
-#'
-#' List available variables in downloaded data that can be used as parameters to
-#' subset the data via \code{hpaSubset()}. This function work with the data
-#' object generated by \code{hpaDownload()}.
-#'
-#' @param data Input the list object generated by \code{hpaDownload()}
-#'
-#' @return The output of this function is a list of vectors containing all
-#'   subset parameter for the downloaded data.
-#'
-#' @examples
-#'   downloadedData <- hpaDownload(downloadList='all', version='example')
-#'   params <- hpaListParam(data=downloadedData)
-#'   params$normal_tissue
-#'
-#' @import dplyr
-#' @importFrom stats na.omit
-#' @export
-
-hpaListParam <- function(data) {
-    availData <- list()
-    
-    if('normal_tissue' %in% names(data)) {
-        availData$normal_tissue <- unique(data$normal_tissue[['tissue']])
-        availData$normal_cell <- unique(data$normal_tissue[['cell_type']])
-    }
-    
-    if('pathology' %in% names(data)) {
-        availData$cancer <- unique(data$pathology[['cancer']])
-    }
-    
-    if('subcellular_location' %in% names(data)) {
-        availData$subcellular_location <- unique(data$subcellular_location[['approved']])%>%
-            strsplit(';') %>% unlist() %>% 
-            unique() %>% na.omit() %>% as.vector()
-    }
-    
-    if('rna_tissue' %in% names(data)) {
-        availData$normal_tissue_rna <- unique(data$rna_tissue[['tissue']])
-    }
-    
-    if('rna_cell_line' %in% names(data)) {
-        availData$cell_line_rna <- unique(data$rna_cell_line[['cell_line']])
-    }
-    
-    return(availData)
-}
-
-
 #################
 ## Subset data ##
 #################
 
 #' Subset downloaded data
 #'
-#' Subset data by gene name, tissue, cell type, cancer and/or cell line. The
-#' input is the list object generated by \code{hpaDownload()} or as the output
-#' of another \code{hpaSubset()}. Use \code{hpaListParam()} to see the list of
-#' available parameters for a specific list object. Will not work on isoform
-#' data.
+#' \code{hpaSubset()} subsets data by gene name, tissue, cell type, cancer and/or
+#' cell line. The input is the list object generated by \code{hpaDownload()} or
+#' as the output of another \code{hpaSubset()}. Use \code{hpaListParam()} to see
+#' the list of available parameters for a specific list object. Will not work on
+#' isoform data.
 #'
 #' @param data Input the list object generated by \code{hpaDownload()} or
 #'   \code{hpaSubset()}
@@ -345,8 +293,12 @@ hpaListParam <- function(data) {
 #' @param targetCellLine Vector of strings of cell lines. Will be used to subset
 #'   the \code{rna_cell_line} dataset.
 #'
-#' @return This function will return a list of tibbles as the result of
-#'   subsetting.
+#' @return \code{hpaSubset} will return a list of tibbles as the result of
+#'   subsetting, depending on the input data.
+#'
+#' @family downloadable datasets functions
+#' 
+#' @rdname hpaListParam
 #'
 #' @examples
 #'   downloadedData <- hpaDownload(downloadList='all', version='example')
@@ -423,6 +375,59 @@ hpaSubset <- function(data,
     return(data)
 }
 
+
+#########################
+## List available data ##
+#########################
+
+#' List available data
+#'
+#' \code{hpaListParam()} list available variables in downloaded data that can be
+#' used as parameters to subset the data via \code{hpaSubset()}. This function
+#' work with the data object generated by \code{hpaDownload()} or a previous
+#' call of \code{hpaSubset()}.
+#'
+#' @return The output of \code{hpaListParam()} is a list of vectors containing
+#'   all subset parameter for the downloaded data.
+#'
+#' @examples
+#'   downloadedData <- hpaDownload(downloadList='all', version='example')
+#'   params <- hpaListParam(data=downloadedData)
+#'   params$normal_tissue
+#'
+#' @import dplyr
+#' @importFrom stats na.omit
+#' @export
+
+hpaListParam <- function(data) {
+    availData <- list()
+    
+    if('normal_tissue' %in% names(data)) {
+        availData$normal_tissue <- unique(data$normal_tissue[['tissue']])
+        availData$normal_cell <- unique(data$normal_tissue[['cell_type']])
+    }
+    
+    if('pathology' %in% names(data)) {
+        availData$cancer <- unique(data$pathology[['cancer']])
+    }
+    
+    if('subcellular_location' %in% names(data)) {
+        availData$subcellular_location <- unique(data$subcellular_location[['approved']])%>%
+            strsplit(';') %>% unlist() %>% 
+            unique() %>% na.omit() %>% as.vector()
+    }
+    
+    if('rna_tissue' %in% names(data)) {
+        availData$normal_tissue_rna <- unique(data$rna_tissue[['tissue']])
+    }
+    
+    if('rna_cell_line' %in% names(data)) {
+        availData$cell_line_rna <- unique(data$rna_cell_line[['cell_line']])
+    }
+    
+    return(availData)
+}
+
 #################
 ## Export data ##
 #################
@@ -441,6 +446,8 @@ hpaSubset <- function(data,
 #'
 #' @return This function will create an xlsx file which one individual
 #'   spreadsheet for each datasets in the input list object.
+#'   
+#' @family downloadable datasets functions
 #'   
 #' @examples 
 #'   downloadedData <- hpaDownload(downloadList='all', version='example')
