@@ -28,3 +28,8 @@ images from imported xml document resulted from \code{hpaXmlGet()}.
   hpaXmlTissueExpr(GCH1xml)
 
 }
+\seealso{
+Other xml functions: \code{\link{hpaXmlAntibody}},
+  \code{\link{hpaXmlGet}}, \code{\link{hpaXmlProtClass}},
+  \code{\link{hpaXmlTissueExprSum}}, \code{\link{hpaXml}}
+}
